# iam

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.admin  Dockerfile.api  Dockerfile.keycloak  Makefile  README.md  compose.yaml  netlify.toml  nginx.conf  openapi.json
.agent/: DECISIONS.md  DEPLOYMENT_STATUS.md  EXECUTION_PLAN.md  HANDOFF.md  PROJECT_STATE.md  RISKS.md  SECURITY_STATUS.md  SESSION_LOG.md  TASKS.md  TEST_STATUS.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_role_assignment_uniqueness.py  0003_role_is_active.py  0004_iam_009_dynamic_permissions.py  cb8255c90c1b_create_missing_application_enums.py  cb8255c90c1b_create_missing_application_enums.pyTAB
backend/src/iitd_iam/: __init__.py  cli.py  config.py  database.py  errors.py  main.py  models.py  schemas.py
backend/src/iitd_iam/api/v1/: routes.py
backend/src/iitd_iam/auth/: dependencies.py  identity.py  permissions.py  redirects.py
backend/src/iitd_iam/integrations/keycloak/: __init__.py  client.py  errors.py  schemas.py  token_verifier.py
backend/src/iitd_iam/middleware/: __init__.py  request_id.py
backend/src/iitd_iam/observability/: audit.py
backend/tests/: conftest.py  test_app_rbac.py  test_invitation_flow.py  test_keycloak_client.py  test_production_config.py  test_security_rules.py  test_token_claims.py  test_token_verifier.py
docs/: FEATURE_COMPLETION_MATRIX.md  GNS_IAM_RBAC.md  IAM_007_IMPLEMENTATION.md  IAM_008_UI_REVAMP.md  IAM_009_DYNAMIC_PERMISSIONS.md  (+1 more)
(+103 files in other folders)
